Network_iptables/rules.v4
root@yyy:/home/naagapov# cat /etc/iptables/rules.v4
# Generated by iptables-save v1.8.4 on Sun Feb 11 22:38:33 2024
*nat
:PREROUTING ACCEPT [18089:1011848]
:INPUT ACCEPT [18006:1007952]
:OUTPUT ACCEPT [32676:1968877]
:POSTROUTING ACCEPT [32676:1968877]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-f82357e89c7c -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-c3b5e0081fdc -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-7b85928f189f -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-f82357e89c7c -j RETURN
-A DOCKER -i br-c3b5e0081fdc -j RETURN
-A DOCKER -i br-7b85928f189f -j RETURN
COMMIT
# Completed on Sun Feb 11 22:38:33 2024
# Generated by iptables-save v1.8.4 on Sun Feb 11 22:38:33 2024
*filter
:INPUT DROP [83:3896]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [12540:960415]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1616 -j ACCEPT
-A INPUT -s 10.0.0.0/24 -p tcp -m state --state NEW -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443,9910:9920 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-f82357e89c7c -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-f82357e89c7c -j DOCKER
-A FORWARD -i br-f82357e89c7c ! -o br-f82357e89c7c -j ACCEPT
-A FORWARD -i br-f82357e89c7c -o br-f82357e89c7c -j ACCEPT
-A FORWARD -o br-c3b5e0081fdc -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-c3b5e0081fdc -j DOCKER
-A FORWARD -i br-c3b5e0081fdc ! -o br-c3b5e0081fdc -j ACCEPT
-A FORWARD -i br-c3b5e0081fdc -o br-c3b5e0081fdc -j ACCEPT
-A FORWARD -o br-7b85928f189f -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-7b85928f189f -j DOCKER
-A FORWARD -i br-7b85928f189f ! -o br-7b85928f189f -j ACCEPT
-A FORWARD -i br-7b85928f189f -o br-7b85928f189f -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-f82357e89c7c ! -o br-f82357e89c7c -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-c3b5e0081fdc ! -o br-c3b5e0081fdc -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-7b85928f189f ! -o br-7b85928f189f -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-f82357e89c7c -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-c3b5e0081fdc -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-7b85928f189f -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sun Feb 11 22:38:33 2024
